Fix image responsiveness issue, add scroll when overflowing

--- a/style.css
+++ b/style.css
@@ -508,6 +508,7 @@ p {
   position: fixed;
   top: 0;
   left: 0;
+  overflow-y: scroll;
   width: 100%;
   height: 100%;
   background-color: #c1c7d0;
@@ -581,10 +582,6 @@ p {
   width: auto;
   flex-grow: 1;
   flex-shrink: 1;
-}
-
-.desktop-project-image img {
-  width: auto;
 }
 
 .pop-up-button-link button img {
